gobmkida/c2/compute_connection_distances
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_connection_distances/src/engine/readconnect.c:1748:12: error: expected expression
*( _OWORD *)&conn->distances[v6 + 397] = xmmword_49CD40; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_connection_distances/src/engine/readconnect.c:1748:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&conn->distances[v6 + 397] = xmmword_49CD40; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_connection_distances/src/engine/readconnect.c:1748:42: error: use of undeclared identifier 'xmmword_49CD40'
*( _OWORD *)&conn->distances[v6 + 397] = xmmword_49CD40; 
                                         ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_connection_distances/src/engine/readconnect.c:1749:12: error: expected expression
*( _OWORD *)&conn->deltas[v6 + 397] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_connection_distances/src/engine/readconnect.c:1749:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&conn->deltas[v6 + 397] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_connection_distances/src/engine/readconnect.c:1750:12: error: expected expression
*( _OWORD *)&conn->coming_from[v6 + 397] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_connection_distances/src/engine/readconnect.c:1750:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&conn->coming_from[v6 + 397] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_connection_distances/src/engine/readconnect.c:1751:12: error: expected expression
*( _OWORD *)&conn->vulnerable1[v6 + 397] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_connection_distances/src/engine/readconnect.c:1751:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&conn->vulnerable1[v6 + 397] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_connection_distances/src/engine/readconnect.c:1752:12: error: expected expression
*( _OWORD *)&conn->vulnerable2[v6 + 397] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_connection_distances/src/engine/readconnect.c:1752:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&conn->vulnerable2[v6 + 397] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_connection_distances/src/engine/readconnect.c:1753:12: error: expected expression
*( _OWORD *)&conn->deltas[v6 + 1] = xmmword_49CD40; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_connection_distances/src/engine/readconnect.c:1753:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&conn->deltas[v6 + 1] = xmmword_49CD40; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_connection_distances/src/engine/readconnect.c:1753:37: error: use of undeclared identifier 'xmmword_49CD40'
*( _OWORD *)&conn->deltas[v6 + 1] = xmmword_49CD40; 
                                    ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_connection_distances/src/engine/readconnect.c:1754:12: error: expected expression
*( _OWORD *)&conn->coming_from[v6 + 1] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_connection_distances/src/engine/readconnect.c:1754:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&conn->coming_from[v6 + 1] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_connection_distances/src/engine/readconnect.c:1755:12: error: expected expression
*( _OWORD *)&conn->vulnerable1[v6 + 1] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_connection_distances/src/engine/readconnect.c:1755:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&conn->vulnerable1[v6 + 1] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_connection_distances/src/engine/readconnect.c:1756:12: error: expected expression
*( _OWORD *)&conn->vulnerable2[v6 + 1] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_connection_distances/src/engine/readconnect.c:1756:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&conn->vulnerable2[v6 + 1] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_connection_distances/src/engine/readconnect.c:1757:12: error: expected expression
*( _OWORD *)&conn->queue[v6 + 1] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_connection_distances/src/engine/readconnect.c:1757:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&conn->queue[v6 + 1] = 0LL; 
   ^
22 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/compute_connection_distances/src/obj/1/readconnect.o] Error 1
